@@ -6,11 +6,13 @@
 		<version>1.0.0</version>
     </parent> 
 	
-  <artifactId>anchor-parent-assembly</artifactId>
-  <version>1.0.0-SNAPSHOT</version>
+  <artifactId>anchor</artifactId>
+  <version>1.0.0</version>
     <url>http://www.anchoranalysis.org/</url>
   
   <packaging>pom</packaging>
+  
+  <name>Anchor Distribution</name>
   
   <description>A distribution that bundles the Anchor JARs, including plugins together with a launcher application.</description>
 
@@ -29,8 +31,52 @@
 		  <organizationUrl>http://www.owenfeehan.com</organizationUrl>
         </developer>
     </developers>
+  
+	  <dependencies>
 
-  <name>anchor-parent-assembly</name>
+		<dependency>
+		  <groupId>${project.groupId}</groupId>
+		  <artifactId>anchor-launcher</artifactId>
+		  <version>1.0.0</version>
+		</dependency>
+			
+		
+		<!-- GPL PLUGINS -->
+		<!-- This is the MAIN LOCATION where we update the version of GPL plugins -->
+		
+		<dependency>
+		  <groupId>${project.groupId}</groupId>
+		  <artifactId>anchor-plugin-fiji</artifactId>
+		  <version>1.0.0</version>
+		</dependency>
+		
+		<dependency>
+		  <groupId>${project.groupId}</groupId>
+		  <artifactId>anchor-plugin-io-gpl</artifactId>
+		  <version>1.0.0</version>
+		</dependency>
+		
+				
+			<!-- We add both onnxruntime dependencies (GPU and CPU) so the appropriate one can be removed later depending on operating system. -->
+			<dependency>
+				<groupId> com.microsoft.onnxruntime</groupId>
+				<artifactId>onnxruntime</artifactId>
+				<version>${onnx-runtime.version}</version>
+			</dependency>
+			
+			<dependency>
+				<groupId> com.microsoft.onnxruntime</groupId>
+				<artifactId>onnxruntime_gpu</artifactId>
+				<version>${onnx-runtime.version}</version>
+			</dependency>
+			
+			<!-- To ensure the lombok jar is distributed. -->
+			<dependency>
+				<groupId>org.projectlombok</groupId>
+				<artifactId>lombok</artifactId>
+			</dependency>
+		
+	  </dependencies>
 	
 	<!-- For tagging releases. -->
   	<scm>
@@ -46,11 +92,6 @@
 		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
 		<sonar.projectKey>anchoranalysis_anchor-assembly</sonar.projectKey>
 	</properties>
-  
-    <modules>
-        <module>anchor</module>
-	   <module>addplugins</module>
-    </modules>
   	
 	<repositories>
 					
@@ -70,6 +111,57 @@
 	</repositories>	
 	
 	<build>
+	
+		<pluginManagement>
+			<plugins>
+			  <plugin>
+				<groupId>com.github.akman</groupId>
+				<artifactId>jpackage-maven-plugin</artifactId>
+				<version>0.1.5</version>
+						<configuration>
+						  
+						  <input>${project.build.directory}/anchor-${project.version}-anchor/anchor-${project.version}/lib</input>
+						  <mainjar>anchor-launcher.jar</mainjar>
+						  <mainclass>org.anchoranalysis.launcher.Launch</mainclass>              
+						  
+						  <!--
+							Specifies the location in which generated output files are placed.
+							Default value: $?{project.build.directory}/jpackage
+						  -->
+						  <dest>${project.build.directory}/jpackage</dest>
+						  
+						  
+							<!-- Enable console output from jpackage -->
+						<verbose>true</verbose>
+						  
+						  <!--
+							Specifies version of the application and/or package.
+						  -->
+						  <appversion>1.0.0</appversion>
+						  
+						  <!--
+							Specifies description of the application.
+						  -->
+						  <description>Anchor Image Analysis</description>
+						  
+						  <!--
+							Specifies vendor of the application.
+						  -->
+						  <vendor>Owen Feehan</vendor>
+						  
+						  <!--
+							Specifies the options to pass to the Java runtime.
+						  -->
+						  <javaoptions>-Dlogging.level=INFO -Djava.util.logging.config.file=logging.properties --enable-native-access=ALL-UNNAMED -Djava.library.path=$APPDIR</javaoptions>
+						  
+						</configuration>             
+			  </plugin>
+			  
+
+			</plugins>
+		 </pluginManagement>	
+	
+	
 		<plugins>
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
@@ -96,14 +188,204 @@
 				<inherited>false</inherited>
 		  </plugin>
 					
+	<!--  Unpack ONNX Runtime JAR, so the native libs can be copied into the respective disbiutions -->
+       <plugin>
+         <groupId>org.apache.maven.plugins</groupId>
+         <artifactId>maven-dependency-plugin</artifactId>
+         <version>3.2.0</version>
+         <executions>
+           <execution>
+             <id>unpack</id>
+             <phase>package</phase>
+             <goals>
+               <goal>unpack</goal>
+             </goals>
+             <configuration>
+               <artifactItems>
+                 <artifactItem>
+                 
+				   <groupId>com.microsoft.onnxruntime</groupId>
+				   <artifactId>onnxruntime_gpu</artifactId>
+				   <version>${onnx-runtime.version}</version>
+                   <type>jar</type>
+                   <overWrite>true</overWrite>
+                 </artifactItem>
+               </artifactItems>
+               <outputDirectory>${project.build.directory}/onnxruntime</outputDirectory>
+               <overWriteReleases>true</overWriteReleases>
+               <overWriteSnapshots>true</overWriteSnapshots>
+             </configuration>
+           </execution>
+         </executions>
+       </plugin>
+       
+	
+      <!-- Creates a folder with all the files needed for running Anchor in target/ -->
+      <plugin>
+        <artifactId>maven-assembly-plugin</artifactId>
+        <executions>
+          <execution>
+            <id>make-assembly</id>
+            <goals>
+              <goal>single</goal>
+            </goals>
+            <phase>package</phase>
+            <configuration>
+              <descriptors>
+                <descriptor>src/assembly/anchor.xml</descriptor>
+              </descriptors>
+              <attach>true</attach>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
+     
+	    
+		<!-- Force a clean to occur before any deploy -->
+		  <plugin>
+			<artifactId>maven-clean-plugin</artifactId>
+			<version>2.4.1</version>
+			<executions>
+			  <execution>
+				<id>auto-clean</id>
+				<phase>initialize</phase>
+				<goals>
+				  <goal>clean</goal>
+				</goals>
+			  </execution>
+			</executions>
+		  </plugin>					
+					
 		</plugins>
 	</build>
-		
-	<dependencies>
-		<dependency>
-			<groupId>org.projectlombok</groupId>
-			<artifactId>lombok</artifactId>
-		</dependency>
-	</dependencies>
+  
+  <profiles>
+      <!-- JPackager on Windows -->
+      <profile>
+          <id>windows</id>
+          <activation>
+            <os><family>Windows</family></os>
+          </activation>
+          <build>
+            <plugins>
+                <plugin>
+                  <groupId>com.github.akman</groupId>
+                  <artifactId>jpackage-maven-plugin</artifactId>
+                  <executions>
+                    <execution>
+                      <id>jpackage-installer</id>
+                      <phase>verify</phase>
+                      <goals>
+                        <goal>jpackage</goal>
+                      </goals>
+                      <configuration>
+                      
+                            <!-- Upper-case first character to match Windows style -->
+                            <name>Anchor</name>
+                            
+                            <!--
+                        Specifies the relative sub-path under the default installation
+                        location of the application for Windows.
+                        
+                        Lower-case first character to match Windows style.
+                        -->
+                            <installdir>Anchor</installdir>
+
+                            <!-- Indicate its a CLI app -->
+                            <winconsole>true</winconsole>
+                      
+                            <!--
+                              Enable adding a dialog to choose a directory in which
+                              the product is installed.
+                              Default value: false
+                            -->
+                            <windirchooser>true</windirchooser>
+                            
+                            <!--
+                              Enable requesting to perform an install on a per-user basis.
+                              Default value: false
+                            -->
+                            <winperuserinstall>true</winperuserinstall>
+                            
+                            <!--
+                              UUID associated with upgrades for this package.
+                            -->
+                            <winupgradeuuid>990bbd96-da42-437d-af8a-aeca5e0a7a5a</winupgradeuuid>
+                    
+                      </configuration>
+                    </execution>
+                  </executions>
+                </plugin>	
+            </plugins>
+          </build>
+      </profile>
+      
+      
+      <!-- JPackager on Linux -->
+      <profile>
+          <id>linux</id>
+          <activation>
+            <os><name>Linux</name></os>
+          </activation>
+          <build>
+            <plugins>
+                <plugin>
+                  <groupId>com.github.akman</groupId>
+                  <artifactId>jpackage-maven-plugin</artifactId>
+                  <executions>
+                    <execution>
+                      <id>jpackage-installer</id>
+                      <phase>verify</phase>
+                      <goals>
+                        <goal>jpackage</goal>
+                      </goals>
+                      <configuration>
+  
+                              <!-- Lower-case first character to match Linux style -->
+                            <name>anchor</name>
+                            
+                            <linuxpackagedeps>libasound2t64,  libmd0, libpng16-16t64</linuxpackagedeps>
+                                            
+                      </configuration>
+                    </execution>
+                  </executions>
+                </plugin>	
+            </plugins>
+          </build>
+      </profile>
+      
+      
+      <!-- JPackager on MacOS -->
+      <profile>
+          <id>MacOS</id>
+          <activation>
+            <os><name>Mac OS X</name></os>
+          </activation>
+          <build>
+            <plugins>
+                <plugin>
+                  <groupId>com.github.akman</groupId>
+                  <artifactId>jpackage-maven-plugin</artifactId>
+                  <executions>
+                    <execution>
+                      <id>jpackage-installer</id>
+                      <phase>verify</phase>
+                      <goals>
+                        <goal>jpackage</goal>
+                      </goals>
+                      <configuration>
+
+                            <!-- Lower-case first character to match MacOS style -->
+                            <name>anchor</name>
+                            
+                      </configuration>
+                    </execution>
+                  </executions>
+                </plugin>	
+            </plugins>
+          </build>
+      </profile>      
+      
+  </profiles>
   
 </project>
